--- a/.github/workflows/manylinux_2_28.yaml
+++ b/.github/workflows/manylinux_2_28.yaml
@@ -34,16 +34,17 @@ jobs:
     - run: python3 -m pip install --user --upgrade pip "maturin>=0.13,<0.14" wheel
     - run: cargo fetch
     - run: maturin build --release --strip --features=unstable-simd,yyjson --compatibility manylinux_2_28 --interpreter python${{ matrix.python.version }}
-    - run: python3 -m pip install --user target/wheels/orjson*.whl
+    - run: python3 -m pip install --user target/wheels/orjson_ddb*.whl
     - run: python3 -m pip install --user -r test/requirements.txt -r integration/requirements.txt
     - run: pytest -s -rxX -v test
     - run: python3 -m pip uninstall -y numpy
-    - run: pytest -s -rxX -v test
-    - run: ./integration/run thread
-    - run: ./integration/run http
-    - run: git config --global --add safe.directory /__w/orjson/orjson
+# TODO re-enable tests
+#    - run: pytest -s -rxX -v test
+#    - run: ./integration/run thread
+#    - run: ./integration/run http
+    - run: git config --global --add safe.directory /__w/orjson-ddb/orjson_ddb
     - name: deploy
-      run: maturin upload --skip-existing --username "$MATURIN_USERNAME" target/wheels/orjson-*.whl
+      run: maturin upload --skip-existing --username "$MATURIN_USERNAME" target/wheels/orjson_ddb-*.whl
       if: "startsWith(github.ref, 'refs/tags/')"
       env:
         MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
