--- a/.github/workflows/linux-cross.yaml
+++ b/.github/workflows/linux-cross.yaml
@@ -51,8 +51,7 @@ jobs:
           venv/bin/pip install -U pip
           venv/bin/pip install -r test/requirements.txt
           venv/bin/pip install orjson_ddb --no-index --find-links dist/ --force-reinstall
-          # TODO re-enable tests
-          # venv/bin/python -m pytest -s -rxX -v test
+          venv/bin/python -m pytest -s -rxX -v test
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
