--- a/.github/workflows/linux-cross.yaml
+++ b/.github/workflows/linux-cross.yaml
@@ -50,7 +50,7 @@ jobs:
           $PYTHON -m venv venv
           venv/bin/pip install -U pip
           venv/bin/pip install -r test/requirements.txt
-          venv/bin/pip install orjson --no-index --find-links dist/ --force-reinstall
+          venv/bin/pip install orjson_ddb --no-index --find-links dist/ --force-reinstall
           venv/bin/python -m pytest -s -rxX -v test
     - name: Upload wheels
       uses: actions/upload-artifact@v2
