--- a/.github/workflows/manylinux_2_28.yaml
+++ b/.github/workflows/manylinux_2_28.yaml
@@ -41,16 +41,16 @@ jobs:
           --interpreter python${{ matrix.python.version }} \
           -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort \
           --target=x86_64-unknown-linux-gnu
-    - run: python3 -m pip install --user target/wheels/orjson*.whl
+    - run: python3 -m pip install --user target/wheels/orjson_ddb*.whl
     - run: python3 -m pip install --user -r test/requirements.txt -r integration/requirements.txt
     - run: pytest -s -rxX -v test
     - run: python3 -m pip uninstall -y numpy
     - run: pytest -s -rxX -v test
     - run: ./integration/run thread
     - run: ./integration/run http
-    - run: git config --global --add safe.directory /__w/orjson/orjson
+    - run: git config --global --add safe.directory /__w/orjson/orjson_ddb
     - name: deploy
-      run: maturin upload --skip-existing --username "$MATURIN_USERNAME" target/wheels/orjson-*.whl
+      run: maturin upload --skip-existing --username "$MATURIN_USERNAME" target/wheels/orjson_ddb-*.whl
       if: "startsWith(github.ref, 'refs/tags/')"
       env:
         MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
