--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -1,13 +1,14 @@
-name: linux-cross
+name: mac-os
 on:
   push:
     branches:
-      - 'tt'
+      - '*'
     tags:
       - '*'
+
 jobs:
-  linux-cross:
-    runs-on: ubuntu-22.04
+  macos:
+    runs-on: macos-11
     strategy:
       fail-fast: false
       matrix:
@@ -18,11 +19,14 @@ jobs:
           { version: '3.10', abi: 'cp310-cp310' },
         ]
         target: [
-          armv7,
-          aarch64,
+          x86_64,
         ]
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Build Wheels
       uses: messense/maturin-action@v1
       env:
@@ -33,25 +37,9 @@ jobs:
         rust-toolchain: nightly-2022-07-26
         manylinux: auto
         args: -i python3.9 --release --strip --out dist
-    - uses: uraimo/run-on-arch-action@v2
-      name: Install built wheel
-      with:
-        arch: ${{ matrix.target }}
-        distro: ubuntu20.04
-        githubToken: ${{ github.token }}
-        install: |
-          apt-get update
-          apt-get install -y --no-install-recommends python3-dev python3-venv software-properties-common build-essential
-          add-apt-repository ppa:deadsnakes/ppa
-          apt-get update
-          apt-get install -y curl python${{ matrix.python.version }}-dev python${{ matrix.python.version }}-venv
-        run: |
-          PYTHON=python${{ matrix.python.version }}
-          $PYTHON -m venv venv
-          venv/bin/pip install -U pip
-          venv/bin/pip install -r test/requirements.txt
-          venv/bin/pip install orjson_ddb --no-index --find-links dist/ --force-reinstall
-          venv/bin/python -m pytest -s -rxX -v test
+    - run: pip install -r test/requirements.txt
+    - run: pip install orjson_ddb --no-index --find-links dist/ --force-reinstall
+    - run: python -m pytest -s -rxX -v test
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
@@ -62,7 +50,7 @@ jobs:
     name: Release
     runs-on: ubuntu-22.04
     if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [ linux-cross ]
+    needs: [ macos ]
     steps:
       - uses: actions/download-artifact@v2
         with:
