--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -27,17 +27,19 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Build Wheels
-      uses: messense/maturin-action@v1
-      env:
-        PYO3_CROSS_LIB_DIR: /opt/python/${{ matrix.python.abi }}
-      with:
-        maturin-version: v0.13.1
-        target: ${{ matrix.target }}
-        rust-toolchain: nightly-2022-07-26
-        manylinux: auto
-        args: -i python3.9 --release --strip --out dist
+    - run: pip install -U pip wheel twine maturin==0.13.1
+#    - name: Build Wheels
+#      uses: messense/maturin-action@v1
+#      env:
+#        PYO3_CROSS_LIB_DIR: /opt/python/${{ matrix.python.abi }}
+#      with:
+#        maturin-version: v0.13.1
+#        target: ${{ matrix.target }}
+#        rust-toolchain: nightly-2022-07-26
+#        manylinux: off
+#        args: -i python3.9 --release --strip --out dist
     - run: pip install -r test/requirements.txt
+    - run: maturin build --no-sdist --release --strip --manylinux off -i $pythonLocation/python --target x86_64-apple-darwin
     - run: pip install orjson_ddb --no-index --find-links dist/ --force-reinstall
     - run: python -m pytest -s -rxX -v test
     - name: Upload wheels
