--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -8,15 +8,15 @@ on:
 
 jobs:
   macos:
-    runs-on: macos-11
+    runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
         python: [
-          { version: '3.7', abi: 'cp37-cp37m' },
-          { version: '3.8', abi: 'cp38-cp38' },
+#          { version: '3.7', abi: 'cp37-cp37m' },
+#          { version: '3.8', abi: 'cp38-cp38' },
           { version: '3.9', abi: 'cp39-cp39' },
-          { version: '3.10', abi: 'cp310-cp310' },
+#          { version: '3.10', abi: 'cp310-cp310' },
         ]
         target: [
           x86_64,
