--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7]
+        python-version: [3.9]
 #          { version: '3.7', abi: 'cp37-cp37m' },
 #          { version: '3.8', abi: 'cp38-cp38' },
 #          { version: '3.9', abi: 'cp39-cp39' },
@@ -35,7 +35,7 @@ jobs:
         target: ${{ matrix.target }}
         rust-toolchain: nightly-2022-07-26
         manylinux: off
-        args: -i python3.9 --release --strip --out dist
+        args: -i $pythonLocation/python --release --strip --out dist
 #    - run: pip install -U pip wheel twine maturin==0.13.1
 #    - run: maturin build --no-sdist --release --strip --manylinux off -i $pythonLocation/python --target x86_64-apple-darwin
     - run: pip install -r test/requirements.txt
