--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 resolver = "2"
 rust-version = "1.57"
 license = "Apache-2.0 OR MIT"
-repository = "https://github.com/ijl/orjson"
-homepage = "https://github.com/ijl/orjson"
+repository = "https://github.com/MattFanto/orjson-ddb"
+homepage = "https://github.com/MattFanto/orjson-ddb"
 readme = "README.md"
 keywords = ["fast", "json", "dynamodb", "aws", "boto3"]
 include = [
