Package name and cicd (#3)
* package rename

* .gitignore

* ci/cd update

* Alias import to avoid too many code changes

* fixed test

* fixed reference to previous package name in integration

* README.md update

* macos pipeline

* macos pipeline

* check python issue on macos

* fixed typo

* fixed typo

* maturin action

* python location

* python location

* python location

* fixed typo

* removed linux env

* refactor

* windows pipeline

* re-enabled pipeline

* version 0.1.0

* moved project url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "orjson"
-version = "3.7.11"
-authors = ["ijl <ijl@mailbox.org>"]
-description = "Fast, correct Python JSON library supporting dataclasses, datetimes, and numpy"
+name = "orjson_ddb"
+version = "0.1.0"
+authors = ["Mattia Fantoni <mattia.fantoni@gmail.com>"]
+description = "Fast Python ser/des for DynamoDB native JSON format"
 edition = "2021"
 resolver = "2"
 rust-version = "1.57"
 license = "Apache-2.0 OR MIT"
-repository = "https://github.com/ijl/orjson"
-homepage = "https://github.com/ijl/orjson"
+repository = "https://github.com/MattFanto/orjson-ddb"
+homepage = "https://github.com/MattFanto/orjson-ddb"
 readme = "README.md"
-keywords = ["fast", "json", "dataclass", "dataclasses", "datetime", "rfc", "8259", "3339"]
+keywords = ["fast", "json", "dynamodb", "aws", "boto3"]
 include = [
     "Cargo.toml",
     "CHANGELOG.md",
@@ -26,7 +26,7 @@ include = [
 ]
 
 [lib]
-name = "orjson"
+name = "orjson_ddb"
 crate-type = ["cdylib"]
 
 [package.metadata.maturin]
