--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -7,7 +7,7 @@ on:
       - '*'
 
 jobs:
-  macos:
+  macos-x86_64:
     runs-on: macos-latest
     strategy:
       fail-fast: false
@@ -37,11 +37,40 @@ jobs:
         name: wheels
         path: dist
 
+  macos-universal:
+    runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.7', '3.8', '3.9', '3.10']
+        target: [aarch64-apple-darwin]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Build Wheels
+        uses: messense/maturin-action@v1
+        with:
+          maturin-version: v0.13.1
+          target: ${{ matrix.target }}
+          rust-toolchain: nightly-2022-07-26
+          args: -i python${{ matrix.python-version }} --release --strip --universal2 --out dist
+      - run: pip install -r test/requirements.txt
+      - run: pip install orjson_ddb --no-index --find-links dist/ --force-reinstall
+      - run: python -m pytest -s -rxX -v test
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
   release:
     name: Release
     runs-on: ubuntu-22.04
     if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [ macos ]
+    needs: [ macos-x86_64, macos-universal ]
     steps:
       - uses: actions/download-artifact@v2
         with:
