--- a/.github/workflows/musllinux.yaml
+++ b/.github/workflows/musllinux.yaml
@@ -1,10 +1,11 @@
 name: musllinux
 on:
+  pull_request:
+    branches: [ master ]
   push:
-    branches:
-      - '*'
     tags:
       - '*'
+
 jobs:
   musllinux:
     runs-on: ubuntu-22.04
