--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ requires = ["maturin>=0.13,<0.14"]
 
 [tool.maturin]
 sdist-include = ["build.rs", "Cargo.lock", "include/**/*"]
+python-source = "python"
 strip = true
 
 [tool.black]
 line-length = 88
 target-version = ["py37"]
-include = ".pyi?$"
+include = "python/orjson_ddb/orjson_ddb.pyi?$"
