--- a/.github/workflows/musllinux.yaml
+++ b/.github/workflows/musllinux.yaml
@@ -17,6 +17,7 @@ jobs:
           { version: '3.8' },
           { version: '3.9' },
           { version: '3.10' },
+          { version: '3.11' },
         ]
         platform:
           - target: aarch64-unknown-linux-musl
@@ -31,8 +32,8 @@ jobs:
     - name: Build wheels
       uses: messense/maturin-action@v1
       with:
-        maturin-version: v0.13.1
-        rust-toolchain: nightly-2022-07-26
+        maturin-version: v0.13.6
+        rust-toolchain: nightly-2022-10-25
         target: ${{ matrix.platform.target }}
         manylinux: musllinux_1_1
         args: --release --strip --out dist --features=unstable-simd,yyjson -i python${{ matrix.python.version }}
