--- a/ci/azure-macos.yml
+++ b/ci/azure-macos.yml
@@ -1,49 +1,51 @@
 parameters:
   interpreter: ''
+  macosx_deployment_target: ''
   toolchain: ''
 
 steps:
-- bash: curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain $(toolchain) --profile minimal -y
-  displayName: rustup
-- bash: rustup default $(toolchain)
-  displayName: ensure toolchain
-- bash: pip install --upgrade pip "maturin>=0.13,<0.14" wheel
+- bash: |
+    curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain $(toolchain) --profile minimal -y
+    rustup component add rust-src --toolchain $(toolchain)-x86_64-apple-darwin
+    rustup target add aarch64-apple-darwin
+    rustup default $(toolchain)
+
+- bash: pip install --upgrade pip pip "maturin>=1,<2" wheel
   displayName: build dependencies
 - bash: pip install -r test/requirements.txt -r integration/requirements.txt
   displayName: test dependencies
-- bash: PATH=$HOME/.cargo/bin:$PATH maturin build --release --strip --features=unstable-simd,yyjson --interpreter $(interpreter)
+
+- bash: |
+    mkdir .cargo
+    cp ci/config.toml .cargo/config
+
+- bash: |
+    PATH=$HOME/.cargo/bin:$PATH \
+    MACOSX_DEPLOYMENT_TARGET=$(macosx_deployment_target) \
+    PYO3_CROSS_LIB_DIR=$(python -c "import sysconfig;print(sysconfig.get_config_var('LIBDIR'))") \
+    maturin build --release --strip --features=no-panic,yyjson --interpreter $(interpreter) --target=universal2-apple-darwin
   env:
     CC: "clang"
-    CFLAGS: "-O2 -fno-plt -flto=thin"
     LDFLAGS: "-O2 -flto=thin -fuse-ld=lld -Wl,--as-needed"
+    CFLAGS: "-O2 -fno-plt -flto=thin"
+    CFLAGS_x86_64_apple_darwin: "-O2 -fno-plt -flto=thin -march=x86-64-v2 -mtune=generic"
+    CFLAGS_aarch64_apple_darwin: "-O2 -fno-plt -flto=thin -mcpu=apple-m1 -mtune=generic"
     CARGO_UNSTABLE_SPARSE_REGISTRY: "true"
-  displayName: build
-- bash: pip install target/wheels/orjson*.whl
-  displayName: install
+  displayName: build universal2
+
+- bash: pip install target/wheels/orjson*universal2.whl
+  displayName: install universal2
+
 - bash: pytest -s -rxX -v test
+  env:
+    PYTHONMALLOC: "debug"
   displayName: pytest
-- bash: pip uninstall -y numpy
-  displayName: remove optional packages
-- bash: pytest -s -rxX -v test
-  displayName: pytest without optional packages
 - bash: ./integration/run thread
   displayName: thread
 - bash: ./integration/run http
   displayName: http
-- bash: rustup target add aarch64-apple-darwin
-  displayName: rustup target
-- bash: PATH=$HOME/.cargo/bin:$PATH PYO3_CROSS_LIB_DIR=$(python -c "import sysconfig;print(sysconfig.get_config_var('LIBDIR'))") maturin build --release --strip --features=unstable-simd --interpreter $(interpreter) --universal2
-  env:
-    CC: "clang"
-    CFLAGS: "-O2 -fno-plt -flto=thin"
-    LDFLAGS: "-O2 -flto=thin -fuse-ld=lld -Wl,--as-needed"
-    CARGO_UNSTABLE_SPARSE_REGISTRY: "true"
-  displayName: build universal2
-- bash: pip install --force-reinstall target/wheels/orjson*universal2.whl
-  displayName: install universal2
-- bash: pytest -s -rxX -v test
-  displayName: pytest universal2
-- bash: ./ci/deploy target/wheels/*_x86_64.whl
-  displayName: deploy x86_64
+- bash: ./integration/run init
+  displayName: init
+
 - bash: ./ci/deploy target/wheels/*_universal2.whl
   displayName: deploy universal2
