--- a/ci/azure-win.yml
+++ b/ci/azure-win.yml
@@ -1,31 +1,35 @@
 parameters:
   interpreter: ''
+  rustup: ''
   target: ''
   toolchain: ''
 
 steps:
 - script: |
-    curl https://win.rustup.rs/x86_64 -o rustup-init.exe
-    rustup-init.exe -y --default-host $(target) --default-toolchain $(toolchain) --profile minimal
+    curl $(rustup) -o rustup-init.exe
+    rustup-init.exe -y --default-host $(target) --default-toolchain $(toolchain)-$(target) --profile minimal
     set PATH=%PATH%;%USERPROFILE%\.cargo\bin
-    rustup default $(toolchain)
+    rustup default $(toolchain)-$(target)
+    rustup component add rust-src
+    mkdir .cargo
+    cp ci/config.toml .cargo/config.toml
     echo "##vso[task.setvariable variable=PATH;]%PATH%;%USERPROFILE%\.cargo\bin"
   displayName: rustup
-- script: python.exe -m pip install --upgrade pip "maturin>=0.13,<0.14" wheel
+- script: python.exe -m pip install --upgrade pip "maturin>=1,<2" wheel
   displayName: build dependencies
 - script: python.exe -m pip install -r test\requirements.txt -r integration\requirements.txt
   displayName: test dependencies
-- script: maturin.exe build --release --strip --interpreter $(interpreter)
+- script: maturin.exe build --release --features=no-panic,yyjson --strip --interpreter $(interpreter) --target $(target)
   displayName: build
 - script: python.exe -m pip install orjson --no-index --find-links=D:\a\1\s\target\wheels
   displayName: install
 - script: python.exe -m pytest -s -rxX -v test
+  env:
+    PYTHONMALLOC: "debug"
   displayName: pytest
-- script: python.exe -m pip uninstall -y numpy
-  displayName: remove optional packages
-- script: python.exe -m pytest -s -rxX -v test
-  displayName: pytest without optional packages
 - script: python.exe integration\thread
   displayName: thread
+- script: python.exe integration\init
+  displayName: init
 - bash: ./ci/deploy /d/a/1/s/target/wheels/*.whl
   displayName: deploy
