--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -16,21 +16,27 @@ jobs:
         target: [x86_64]
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Build Wheels
       uses: messense/maturin-action@v1
       with:
-        maturin-version: v0.13.1
+        maturin-version: v1.3.1
         target: ${{ matrix.target }}
-        rust-toolchain: nightly-2022-07-26
+        rust-toolchain: nightly-2023-10-10
         manylinux: off
         args: -i python${{ matrix.python-version }} --release --strip --out dist
+
     - run: pip install -r test/requirements.txt
-    - run: pip install orjson_ddb --no-index --find-links dist/ --force-reinstall
+
+    - run: pip install orjson-ddb --no-index --find-links dist/ --force-reinstall
+
     - run: python -m pytest -s -rxX -v test
+
     - name: Upload wheels
       uses: actions/upload-artifact@v2
       with:
@@ -53,13 +59,17 @@ jobs:
       - name: Build Wheels
         uses: messense/maturin-action@v1
         with:
-          maturin-version: v0.13.1
+          maturin-version: v1.3.1
           target: ${{ matrix.target }}
-          rust-toolchain: nightly-2022-07-26
+          rust-toolchain: nightly-2023-10-10
           args: -i python${{ matrix.python-version }} --release --strip --universal2 --out dist
+
       - run: pip install -r test/requirements.txt
-      - run: pip install orjson_ddb --no-index --find-links dist/ --force-reinstall
+
+      - run: pip install orjson-ddb --no-index --find-links dist/ --force-reinstall
+
       - run: python -m pytest -s -rxX -v test
+
       - name: Upload wheels
         uses: actions/upload-artifact@v2
         with:
@@ -75,10 +85,13 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: wheels
+
       - uses: actions/setup-python@v2
         with:
           python-version: "3.10"
-      - run: pip install "maturin>=0.13,<0.14"
+
+      - run: pip install "maturin>=1,<2"
+
       - name: deploy
         run: maturin upload --skip-existing --username "$MATURIN_USERNAME" *.whl
         env:
