--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -15,15 +15,15 @@ jobs:
         python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
         target: [x86_64]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Build Wheels
-      uses: messense/maturin-action@v1
+      uses: PyO3/maturin-action@v1
       with:
         maturin-version: v1.3.1
         target: ${{ matrix.target }}
@@ -38,31 +38,32 @@ jobs:
     - run: python -m pytest -s -rxX -v test
 
     - name: Upload wheels
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: wheels
         path: dist
+
 
   macos-universal:
     runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10']
-        target: [aarch64-apple-darwin]
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        target: [universal2-apple-darwin]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Build Wheels
-        uses: messense/maturin-action@v1
+        uses: PyO3/maturin-action@v1
         with:
           maturin-version: v1.3.1
           target: ${{ matrix.target }}
           rust-toolchain: nightly-2023-10-10
-          args: -i python${{ matrix.python-version }} --release --strip --universal2 --out dist
+          args: -i python${{ matrix.python-version }} --release --strip --out dist
 
       - run: pip install -r test/requirements.txt
 
@@ -71,7 +72,7 @@ jobs:
       - run: python -m pytest -s -rxX -v test
 
       - name: Upload wheels
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: wheels
           path: dist
